# ml-ops-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  data.dvc  main_api.py  models.dvc  project_structure.md  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: integration-tests.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml  sweep.yaml
configs/experiment/: fast_dev.yaml
data/: processed.dvc
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
reports/: README.md  architectural_diagram.md  checklist.md
scripts/: train_cloud.sh
src/project/: api.py  api_guide.md  data.py  dataset.py  drift_detection.py  evaluate.py  frontend.py  model.py  models.dvc  predict.py  profiler.py  requests_api.py  train.py
tests/: test_data.py  test_model.py  test_predict.py  test_profile.py
tests/integration/: test_data_acess.py  test_model_inference.py  test_model_training_integration.py
tests/performancetests/: locustfile.py
tests/profile/: fit-advanced_profile_results.txt  fit-pytorch_profile_results-[Strategy]SingleDeviceStrategy.training_step.1768925895467567839.pt.trace_before.json  fit-pytorch_profile_results-[Strategy]SingleDeviceStrategy.training_step.1768926347693731267.pt.trace.json  fit-pytorch_profile_results-[Strategy]SingleDeviceStrategy.validation_step.1768926078444926584.pt.trace_before.json  fit-pytorch_profile_results-[Strategy]SingleDeviceStrategy.validation_step.1768926451059735461.pt.trace.json  fit-pytorch_profile_results.txt  fit-pytorch_profile_results_before.txt  fit-simple_profile_results.txt
tests/unittests/: test_api.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20260115_152849-1sbu68tu/: run-1sbu68tu.wandb
wandb/run-20260115_152849-1sbu68tu/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_153304-q18j65pw/: run-q18j65pw.wandb
wandb/run-20260115_153304-q18j65pw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_153622-8vw8q3t3/: run-8vw8q3t3.wandb
wandb/run-20260115_153622-8vw8q3t3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_154124-1m7o0tcl/: run-1m7o0tcl.wandb
wandb/run-20260115_154124-1m7o0tcl/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_161950-ati1wh0o/: run-ati1wh0o.wandb
wandb/run-20260115_161950-ati1wh0o/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_162809-aexnda6h/: run-aexnda6h.wandb
wandb/run-20260115_162809-aexnda6h/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_163220-5si6dlsp/: run-5si6dlsp.wandb
wandb/run-20260115_163220-5si6dlsp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_171500-eujxbmqc/: run-eujxbmqc.wandb
wandb/run-20260115_171500-eujxbmqc/files/: config.yaml  wandb-metadata.json
wandb/run-20260115_171622-hvqkk8if/: run-hvqkk8if.wandb
wandb/run-20260115_171622-hvqkk8if/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260115_173415-jwoqe6oy/: run-jwoqe6oy.wandb
wandb/run-20260115_173415-jwoqe6oy/files/: config.yaml  wandb-metadata.json  wandb-summary.json
