[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "project"
version = "0.0.1"
description = "Machine Learning Operations Project"
authors = [
  { name = "group76", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.128.0",
    "invoke>=2.2.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "transformers>=4.57.5",
    "typer==0.15.1",
    "uvicorn==0.40.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.1.3",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
lint.select = ["I"]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
